// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Homepage latest news component should match snapshot with a featured story 1`] = `
<div>
  <section
    class="latestNews"
    data-tracking="latest-news"
  >
    <h2
      class="title"
    >
      Latest from NICE
    </h2>
    <article
      class="story"
    >
      <div
        class="imageContainer"
        style="background-image: url(https://placebacon.net/300/210?image=1/m/868x0/filters:quality%2880%29);"
      />
      <div
        class="content"
      >
        <h3
          class="heading"
        >
          <a
            href="/i/am/a-very-full-slug"
          >
            Featured story title
          </a>
        </h3>
        <p>
          Featured story intro text
        </p>
        <footer>
          <span
            class="tag tag--outline"
            data-component="tag"
          >
            News
          </span>
          <time
            class="date"
            datetime="2024-01-31T15:16:15.19"
          >
            31 January 2024
          </time>
        </footer>
      </div>
    </article>
    <ol
      class="newsGrid"
    >
      <li
        class="newsItem"
      >
        <article
          class="newsCard "
        >
          <a
            aria-hidden="true"
            class="imageContainer"
            href="/i/am/a-very-full-slug"
            style="background-image: url(localhost/f/243782/420x234/7a576133e7/register-for-board-meeting.PNG/m/867x0/filters:format%28jpeg%29:quality%2880%29/m/868x0/filters:quality%2880%29);"
            tabindex="-1"
          >
             
          </a>
          <div>
            <h3
              class="heading"
            >
              <a
                href="/i/am/a-very-full-slug"
              >
                Test news article title
              </a>
            </h3>
            <p>
              Test intro text
            </p>
            <footer>
              <div>
                <span
                  class="tag tag--outline"
                  data-component="tag"
                >
                  News
                </span>
                <time
                  class="date"
                  datetime="2024-01-31T15:16:15.19"
                >
                  31 January 2024
                </time>
              </div>
            </footer>
          </div>
        </article>
      </li>
      <li
        class="newsItem"
      >
        <article
          class="newsCard "
        >
          <a
            aria-hidden="true"
            class="imageContainer"
            href="/i/am/a-very-full-slug"
            style="background-image: url(localhost/f/243782/420x234/7a576133e7/register-for-board-meeting.PNG/m/867x0/filters:format%28jpeg%29:quality%2880%29/m/868x0/filters:quality%2880%29);"
            tabindex="-1"
          >
             
          </a>
          <div>
            <h3
              class="heading"
            >
              <a
                href="/i/am/a-very-full-slug"
              >
                Test blog post title
              </a>
            </h3>
            <p
              class="blogIntroText"
            >
              Let's play Blockbusters!
            </p>
            <footer>
              <div
                class="author"
              >
                Bob Holness
                , 
                Blockbusters host
              </div>
              <div>
                <span
                  class="tag tag--outline"
                  data-component="tag"
                >
                  Blogs
                </span>
                <time
                  class="date"
                  datetime="2024-02-20"
                >
                  20 February 2024
                </time>
              </div>
            </footer>
          </div>
        </article>
      </li>
      <li
        class="newsItem"
      >
        <article
          class="newsCard "
        >
          <a
            aria-hidden="true"
            class="imageContainer"
            href="/i/am/a-very-full-slug"
            style="background-image: url(localhost/f/243782/420x234/7a576133e7/register-for-board-meeting.PNG/m/867x0/filters:format%28jpeg%29:quality%2880%29/m/868x0/filters:quality%2880%29);"
            tabindex="-1"
          >
             
          </a>
          <div>
            <h3
              class="heading"
            >
              <a
                href="/i/am/a-very-full-slug"
              >
                Test news article title
              </a>
            </h3>
            <p>
              Test intro text
            </p>
            <footer>
              <div>
                <span
                  class="tag tag--outline"
                  data-component="tag"
                >
                  News
                </span>
                <time
                  class="date"
                  datetime="2024-01-31T15:16:15.19"
                >
                  31 January 2024
                </time>
              </div>
            </footer>
          </div>
        </article>
      </li>
    </ol>
    <p>
      <a
        href="/news"
      >
        View all news, blogs and podcasts
      </a>
    </p>
  </section>
</div>
`;

exports[`Homepage latest news component should match snapshot without a featured story 1`] = `
<div>
  <section
    class="latestNews"
    data-tracking="latest-news"
  >
    <h2
      class="title"
    >
      Latest from NICE
    </h2>
    <ol
      class="newsGrid"
    >
      <li
        class="newsItem"
      >
        <article
          class="newsCard "
        >
          <a
            aria-hidden="true"
            class="imageContainer"
            href="/i/am/a-very-full-slug"
            style="background-image: url(localhost/f/243782/420x234/7a576133e7/register-for-board-meeting.PNG/m/867x0/filters:format%28jpeg%29:quality%2880%29/m/868x0/filters:quality%2880%29);"
            tabindex="-1"
          >
             
          </a>
          <div>
            <h3
              class="heading"
            >
              <a
                href="/i/am/a-very-full-slug"
              >
                Test news article title
              </a>
            </h3>
            <p>
              Test intro text
            </p>
            <footer>
              <div>
                <span
                  class="tag tag--outline"
                  data-component="tag"
                >
                  News
                </span>
                <time
                  class="date"
                  datetime="2024-01-31T15:16:15.19"
                >
                  31 January 2024
                </time>
              </div>
            </footer>
          </div>
        </article>
      </li>
      <li
        class="newsItem"
      >
        <article
          class="newsCard "
        >
          <a
            aria-hidden="true"
            class="imageContainer"
            href="/i/am/a-very-full-slug"
            style="background-image: url(localhost/f/243782/420x234/7a576133e7/register-for-board-meeting.PNG/m/867x0/filters:format%28jpeg%29:quality%2880%29/m/868x0/filters:quality%2880%29);"
            tabindex="-1"
          >
             
          </a>
          <div>
            <h3
              class="heading"
            >
              <a
                href="/i/am/a-very-full-slug"
              >
                Test blog post title
              </a>
            </h3>
            <p
              class="blogIntroText"
            >
              Let's play Blockbusters!
            </p>
            <footer>
              <div
                class="author"
              >
                Bob Holness
                , 
                Blockbusters host
              </div>
              <div>
                <span
                  class="tag tag--outline"
                  data-component="tag"
                >
                  Blogs
                </span>
                <time
                  class="date"
                  datetime="2024-02-20"
                >
                  20 February 2024
                </time>
              </div>
            </footer>
          </div>
        </article>
      </li>
      <li
        class="newsItem"
      >
        <article
          class="newsCard "
        >
          <a
            aria-hidden="true"
            class="imageContainer"
            href="/i/am/a-very-full-slug"
            style="background-image: url(localhost/f/243782/420x234/7a576133e7/register-for-board-meeting.PNG/m/867x0/filters:format%28jpeg%29:quality%2880%29/m/868x0/filters:quality%2880%29);"
            tabindex="-1"
          >
             
          </a>
          <div>
            <h3
              class="heading"
            >
              <a
                href="/i/am/a-very-full-slug"
              >
                Test news article title
              </a>
            </h3>
            <p>
              Test intro text
            </p>
            <footer>
              <div>
                <span
                  class="tag tag--outline"
                  data-component="tag"
                >
                  News
                </span>
                <time
                  class="date"
                  datetime="2024-01-31T15:16:15.19"
                >
                  31 January 2024
                </time>
              </div>
            </footer>
          </div>
        </article>
      </li>
    </ol>
    <p>
      <a
        href="/news"
      >
        View all news, blogs and podcasts
      </a>
    </p>
  </section>
</div>
`;
